--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,167 +1,136 @@
+{% set pageId = 1 %}
+{% set permalink = pages[pageId].path %}
+
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body class="page__body">
-    <div class="wrapper">
-      <header class="page-header">
-        <div class="logo-container">
-          <a href="#" class="logo-link">
-            <img src="img/header/logo-cat.svg" alt="" class="logo-img">
-            <img src="img/header/logo-words.svg" alt="" class="logo-words">
-          </a>
-        </div>
-        <nav class="navigation">
-          <button type="button" class="navigation__menu-button" hidden>
-            <span class="visualyy-hidden">кнопка вызова меню</span>
-          </button>
-          <ul class="navigation__list">
-            <li class="navigation__item">
-              <a href="index.html" class="navigation__link">Главная</a>
-            </li>
-            <li class="navigation__item">
-              <a href="#" class="navigation__link current-page">Каталог продукции</a>
-            </li>
-            <li class="navigation__item">
-              <a href="form.html" class="navigation__link">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main class="page__main">
-        <h1 class="catalog-title">Каталог продукции</h1>
-        <ul class="products">
-          <li class="product-card">
-            <img src="img/catalog/chiken500.png" alt="Курица">
-            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
-            <span class="product-card__item-name">Масса</span>
-            <span class="product-card__item-value">500 г</span>
-            <span class="product-card__item-name">Вкус</span>
-            <span class="product-card__item-value">Курица</span>
-            <span class="product-card__item-name">Цена</span>
-            <span class="product-card__item-value">700 Р.</span>
-            <a href="#" class="product-card__button">заказать</a>
-          </li>
-          <li class="product-card">
-            <img src="img/catalog/fish1000.png" alt="Курица">
-            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
-            <span class="product-card__item-name">Масса</span>
-            <span class="product-card__item-value">1000 г</span>
-            <span class="product-card__item-name">Вкус</span>
-            <span class="product-card__item-value">Курица</span>
-            <span class="product-card__item-name">Цена</span>
-            <span class="product-card__item-value">1000 Р.</span>
-            <a href="#" class="product-card__button">заказать</a>
-          </li>
-          <li class="product-card">
-            <img src="img/catalog/fish500.png" alt="Рыба">
-            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
-            <span class="product-card__item-name">Масса</span>
-            <span class="product-card__item-value">500 г</span>
-            <span class="product-card__item-name">Вкус</span>
-            <span class="product-card__item-value">Рыба</span>
-            <span class="product-card__item-name">Цена</span>
-            <span class="product-card__item-value">700 Р.</span>
-            <a href="#" class="product-card__button">заказать</a>
-          </li>
-          <li class="product-card">
-            <img src="img/catalog/fish1000.png" alt="Рыба">
-            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
-            <span class="product-card__item-name">Масса</span>
-            <span class="product-card__item-value">1000 г</span>
-            <span class="product-card__item-name">Вкус</span>
-            <span class="product-card__item-value">Рыба</span>
-            <span class="product-card__item-name">Цена</span>
-            <span class="product-card__item-value">1000 Р.</span>
-            <a href="#" class="product-card__button">заказать</a>
-          </li>
-          <li class="product-card">
-            <img src="img/catalog/buckwheat500.png" alt="Гречка">
-            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
-            <span class="product-card__item-name">Масса</span>
-            <span class="product-card__item-value">500 г</span>
-            <span class="product-card__item-name">Вкус</span>
-            <span class="product-card__item-value">Гречка</span>
-            <span class="product-card__item-name">Цена</span>
-            <span class="product-card__item-value">400 Р.</span>
-            <a href="#" class="product-card__button">заказать</a>
-          </li>
-          <li class="product-card">
-            <img src="img/catalog/buckwheat1000.png" alt="Гречка">
-            <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
-            <span class="product-card__item-name">Масса</span>
-            <span class="product-card__item-value">1000 г</span>
-            <span class="product-card__item-name">Вкус</span>
-            <span class="product-card__item-value">Гречка</span>
-            <span class="product-card__item-name">Цена</span>
-            <span class="product-card__item-value">700 Р.</span>
-            <a href="#" class="product-card__button">заказать</a>
-          </li>
-          <li class="product-card">
-            <img src="img/catalog/rice500.png" alt="Рис">
-            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
-            <span class="product-card__item-name">Масса</span>
-            <span class="product-card__item-value">500 г</span>
-            <span class="product-card__item-name">Вкус</span>
-            <span class="product-card__item-value">Рис</span>
-            <span class="product-card__item-name">Цена</span>
-            <span class="product-card__item-value">500 Р.</span>
-            <a href="#" class="product-card__button">заказать</a>
-          </li>
-          <li class="show-more">
-            <p>Показать еще 100500 товаров</p>
-            <p>На&nbsp;самом деле вкусов гораздо больше!</p>
-            <a href="#" class="show-more__button">показать все</a>
-          </li>
-        </ul>
-        <section class="additional">
-          <ul class="additional-products">
-            <li class="product">
-              <span class="product__name">сахарозаменитель</span>
-              <span class="product__unit">1 упаковка (100 г)</span>
-              <span class="product__price">200 Р.</span>
-              <a href="#" class="product__order-button">заказать</a>
-            </li>
-            <li class="product">
-              <span class="product__name">питьевая вода</span>
-              <span class="product__unit">5 литров</span>
-              <span class="product__price">50 Р.</span>
-              <a href="#" class="product__order-button">заказать</a>
-            </li>
-            <li class="product">
-              <span class="product__name">молоко</span>
-              <span class="product__unit">1 литр</span>
-              <span class="product__price">100 Р.</span>
-              <a href="#" class="product__order-button">заказать</a>
-            </li>
-            <li class="product">
-              <span class="product__name">витамины</span>
-              <span class="product__unit">1 упаковка (30 г)</span>
-              <span class="product__price">300 Р.</span>
-              <a href="#" class="product__order-button">заказать</a>
-            </li>
-          </ul>
-        </section>
-        <div class="ad">
-          <p class="ad__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
-        </div>
-      </main>
-      <footer class="page-footer">
-        <div class="logo-container">
-          <a href="#" class="logo-link">
-            <img src="img/header/logo-words.svg" alt="" class="logo-words">
-          </a>
-        </div>
-        <div class="social">
-          <a href="https://vk.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy vk</a>
-          <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social-link">HtmlAcademy instagram</a>
-          <a href="https://www.facebook.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy facebook</a>
-        </div>
-        <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
-      </footer>
+{% include "./templates/head.twig" %}
+
+
+<body class="page__body">
+
+  {% include "./templates/header.twig" %}
+
+  <main class="page__main">
+    <h1 class="catalog-title">Каталог продукции</h1>
+    <ul class="products">
+      <li class="product-card">
+        <img src="img/catalog/chiken500.png" alt="Курица">
+        <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+        <span class="product-card__item-name">Масса</span>
+        <span class="product-card__item-value">500 г</span>
+        <span class="product-card__item-name">Вкус</span>
+        <span class="product-card__item-value">Курица</span>
+        <span class="product-card__item-name">Цена</span>
+        <span class="product-card__item-value">700 Р.</span>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img src="img/catalog/fish1000.png" alt="Курица">
+        <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+        <span class="product-card__item-name">Масса</span>
+        <span class="product-card__item-value">1000 г</span>
+        <span class="product-card__item-name">Вкус</span>
+        <span class="product-card__item-value">Курица</span>
+        <span class="product-card__item-name">Цена</span>
+        <span class="product-card__item-value">1000 Р.</span>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img src="img/catalog/fish500.png" alt="Рыба">
+        <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+        <span class="product-card__item-name">Масса</span>
+        <span class="product-card__item-value">500 г</span>
+        <span class="product-card__item-name">Вкус</span>
+        <span class="product-card__item-value">Рыба</span>
+        <span class="product-card__item-name">Цена</span>
+        <span class="product-card__item-value">700 Р.</span>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img src="img/catalog/fish1000.png" alt="Рыба">
+        <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+        <span class="product-card__item-name">Масса</span>
+        <span class="product-card__item-value">1000 г</span>
+        <span class="product-card__item-name">Вкус</span>
+        <span class="product-card__item-value">Рыба</span>
+        <span class="product-card__item-name">Цена</span>
+        <span class="product-card__item-value">1000 Р.</span>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img src="img/catalog/buckwheat500.png" alt="Гречка">
+        <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+        <span class="product-card__item-name">Масса</span>
+        <span class="product-card__item-value">500 г</span>
+        <span class="product-card__item-name">Вкус</span>
+        <span class="product-card__item-value">Гречка</span>
+        <span class="product-card__item-name">Цена</span>
+        <span class="product-card__item-value">400 Р.</span>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img src="img/catalog/buckwheat1000.png" alt="Гречка">
+        <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
+        <span class="product-card__item-name">Масса</span>
+        <span class="product-card__item-value">1000 г</span>
+        <span class="product-card__item-name">Вкус</span>
+        <span class="product-card__item-value">Гречка</span>
+        <span class="product-card__item-name">Цена</span>
+        <span class="product-card__item-value">700 Р.</span>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img src="img/catalog/rice500.png" alt="Рис">
+        <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+        <span class="product-card__item-name">Масса</span>
+        <span class="product-card__item-value">500 г</span>
+        <span class="product-card__item-name">Вкус</span>
+        <span class="product-card__item-value">Рис</span>
+        <span class="product-card__item-name">Цена</span>
+        <span class="product-card__item-value">500 Р.</span>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="show-more">
+        <p>Показать еще 100500 товаров</p>
+        <p>На&nbsp;самом деле вкусов гораздо больше!</p>
+        <a href="#" class="show-more__button">показать все</a>
+      </li>
+    </ul>
+    <section class="additional">
+      <ul class="additional-products">
+        <li class="product">
+          <span class="product__name">сахарозаменитель</span>
+          <span class="product__unit">1 упаковка (100 г)</span>
+          <span class="product__price">200 Р.</span>
+          <a href="#" class="product__order-button">заказать</a>
+        </li>
+        <li class="product">
+          <span class="product__name">питьевая вода</span>
+          <span class="product__unit">5 литров</span>
+          <span class="product__price">50 Р.</span>
+          <a href="#" class="product__order-button">заказать</a>
+        </li>
+        <li class="product">
+          <span class="product__name">молоко</span>
+          <span class="product__unit">1 литр</span>
+          <span class="product__price">100 Р.</span>
+          <a href="#" class="product__order-button">заказать</a>
+        </li>
+        <li class="product">
+          <span class="product__name">витамины</span>
+          <span class="product__unit">1 упаковка (30 г)</span>
+          <span class="product__price">300 Р.</span>
+          <a href="#" class="product__order-button">заказать</a>
+        </li>
+      </ul>
+    </section>
+    <div class="ad">
+      <p class="ad__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
     </div>
-  </body>
+  </main>
+
+  {% include "./templates/footer.twig" %}
+
+</body>
+
 </html>
