--- a/source/index.html
+++ b/source/index.html
@@ -1,126 +1,94 @@
+{% set pageId = 0 %}
+{% set permalink = pages[pageId].path %}
+
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body class="page__body">
-    <div class="wrapper">
-      <header class="page-header">
-        <div class="logo-container">
-          <a href="#" class="logo-link">
-            <img src="img/header/logo-cat.svg" alt="" class="logo-img">
-            <img src="img/header/logo-words.svg" alt="" class="logo-words">
-          </a>
+{% include "./templates/head.twig" %}
+
+<body class="page__body">
+
+  {% include "./templates/header.twig" %}
+
+  <main class="page__main">
+    <h1 class="page__title visualyy-hidden">
+      Cat energy
+    </h1>
+    <section class="promo">
+      <h2 class="promo__title">Функциональное питание для котов</h2>
+      <p class="promo__text">Занялся собой? Займись котом!</p>
+      <div class="img-container">
+        <img src="img/promo/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__img">
+      </div>
+      <a href="#" class="promo__button button">Подобрать программу</a>
+    </section>
+    <section class="nutrition-programm">
+      <div class="nutrition-programm__slim">
+        <h2 class="nutrition-programm__title">Похудение</h2>
+        <p class="nutrition-programm__text">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <a href="#" class="nutrition-programm__link">Каталог slim</a>
+      </div>
+      <div class="nutrition-programm__slim">
+        <h2 class="nutrition-programm__title">Набор массы</h2>
+        <p class="nutrition-programm__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+        <a href="#" class="nutrition-programm__link">Каталог Pro</a>
+      </div>
+    </section>
+    <section class="description">
+      <h2 class="desription-title">Как это работает</h2>
+      <ol class="description__list">
+        <li class="description__item description__item-feed">
+            <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
+        </li>
+        <li class="description__item description__item-powder">
+            <p class="description__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.</p>
+        </li>
+        <li class="description__item description__item-eating">
+            <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
+        </li>
+        <li class="description__item description__item-timer">
+            <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
+        </li>
+      </ol>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
+      <div class="example-facts">
+        <dl class="example-facts__item">
+          <dt class="example-facts__item-explanation">снижение веса</dt>
+          <dd class="example-facts__item-fact">5 кг</dd>
+          <dt class="example-facts__item-explanation">затрачено времени</dt>
+          <dd class="example-facts__item-fact">60 дней</dd>
+          <dt class="example__spending">Затраты на&nbsp;питание:</dt>
+          <dd class="example-facts__item-fact">15&nbsp;000&nbsp;РУБ.</dd>
+        </dl>
+      </div>
+      <div class="example__slider">
+        <div class="slider-images">
+          <img src="img/cat-fat.png" alt="было" class="slider-images__was-image">
+          <img src="img/cat-skinny.png" alt="стало" class="slider-images__now-image">
         </div>
-        <nav class="navigation">
-          <button type="button" class="navigation__menu-button" hidden>
-            <span class="visualyy-hidden">кнопка вызова меню</span>
-          </button>
-          <ul class="navigation__list">
-            <li class="navigation__item">
-              <a href="#" class="navigation__link navigation__link--current-page">Главная</a>
-            </li>
-            <li class="navigation__item">
-              <a href="catalog.html" class="navigation__link">Каталог продукции</a>
-            </li>
-            <li class="navigation__item">
-              <a href="form.html" class="navigation__link">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main class="page__main">
-        <h1 class="page__title visualyy-hidden">
-          Cat energy
-        </h1>
-        <section class="promo">
-          <h2 class="promo__title">Функциональное питание для котов</h2>
-          <p class="promo__text">Занялся собой? Займись котом!</p>
-          <div class="img-container">
-            <img src="img/promo/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__img">
-          </div>
-          <a href="#" class="promo__button button">Подобрать программу</a>
-        </section>
-        <section class="nutrition-programm">
-          <div class="nutrition-programm__slim">
-            <h2 class="nutrition-programm__title">Похудение</h2>
-            <p class="nutrition-programm__text">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a href="#" class="nutrition-programm__link">Каталог slim</a>
-          </div>
-          <div class="nutrition-programm__slim">
-            <h2 class="nutrition-programm__title">Набор массы</h2>
-            <p class="nutrition-programm__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a href="#" class="nutrition-programm__link">Каталог Pro</a>
-          </div>
-        </section>
-        <section class="description">
-          <h2 class="desription-title">Как это работает</h2>
-          <ol class="description__list">
-            <li class="description__item description__item-feed">
-                <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
-            </li>
-            <li class="description__item description__item-powder">
-                <p class="description__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.</p>
-            </li>
-            <li class="description__item description__item-eating">
-                <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
-            </li>
-            <li class="description__item description__item-timer">
-                <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
-            </li>
-          </ol>
-        </section>
-        <section class="example">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
-          <div class="example-facts">
-            <dl class="example-facts__item">
-              <dt class="example-facts__item-explanation">снижение веса</dt>
-              <dd class="example-facts__item-fact">5 кг</dd>
-              <dt class="example-facts__item-explanation">затрачено времени</dt>
-              <dd class="example-facts__item-fact">60 дней</dd>
-              <dt class="example__spending">Затраты на&nbsp;питание:</dt>
-              <dd class="example-facts__item-fact">15&nbsp;000&nbsp;РУБ.</dd>
-            </dl>
-          </div>
-          <div class="example__slider">
-            <div class="slider-images">
-              <img src="img/slider/cat-fat.png" alt="было" class="slider-images__was-image">
-              <img src="img/slider/cat-skinny.png" alt="стало" class="slider-images__now-image">
-            </div>
-            <div class="sliider-was-now" hidden>
-              <span class="sliider-was-now__text sliider-was-now__text--was">Было</span>
-              <div class="progress">
-                <div class="progress-line">
-                  <button type="button" class="progress-line__button"><span class="visually-hidden">кнопка слайдера</span></button>
-                </div>
-              </div>
-              <span class="sliider-was-now__text sliider-was-now__text--now">Стало</span>
+        <div class="sliider-was-now" hidden>
+          <span class="sliider-was-now__text sliider-was-now__text--was">Было</span>
+          <div class="progress">
+            <div class="progress-line">
+              <button type="button" class="progress-line__button"><span class="visually-hidden">кнопка слайдера</span></button>
             </div>
           </div>
-        </section>
-        <section class="contacts">
-          <h2 class="visually-hidden">Наш адрес</h2>
-          <p class="contacts__lead-text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
-          <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-          <div class="contacts__map"></div>
-        </section>
-      </main>
-      <footer class="page-footer">
-        <div class="logo-container">
-          <a href="#" class="logo-link">
-            <img src="img/header/logo-words.svg" alt="" class="logo-words">
-          </a>
+          <span class="sliider-was-now__text sliider-was-now__text--now">Стало</span>
         </div>
-        <div class="social">
-          <a href="https://vk.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy vk</a>
-          <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social-link">HtmlAcademy instagram</a>
-          <a href="https://www.facebook.com/htmlacademy" target="_blank" class="social-link">HtmlAcademy facebook</a>
-        </div>
-        <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
-      </footer>
-    </div>
-  </body>
+      </div>
+    </section>
+    <section class="contacts">
+      <h2 class="visually-hidden">Наш адрес</h2>
+      <p class="contacts__lead-text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
+      <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <div class="contacts__map"></div>
+    </section>
+  </main>
+
+  {% include "./templates/footer.twig" %}
+
+</body>
+
 </html>
